--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,6 @@
   <head>
     <title>MiniTweetApp</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -14,11 +13,22 @@
         <%= link_to "MiniTweet", root_path %>
       </div>
       <ul class="header-menus">
-        <li><%= link_to "MiniTweetについて", about_path %></li>
-        <li><%= link_to "投稿一覧", posts_index_path %></li>
-        
+        <% if @current_user %>
+          <li><%= link_to @current_user.name, users_path(@user) %></li>
+          <li><%= link_to "投稿一覧", posts_index_path %></li>
+          <li><%= link_to "新規投稿",  posts_new_path %></li>
+          <li><%= link_to "全てのユーザー", users_path %></li>
+          <li><%= link_to "ログアウト", logout_path, method: :post %></li>
+        <% else %>
+          <li><%= link_to "MiniTweetについて", about_path %></li>
+          <li><%= link_to "ユーザー新規登録", new_user_path %></li>
+          <li><%= link_to "ログイン", login_path %></li>
+        <% end %>
       </ul>
     </header>
+    <% if flash[:notice] %>
+      <div class="flash"><%= flash[:notice] %></div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
